# triage4

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
assessment/: __init__.py
assessment/baselines/: __init__.py  drr_scheduler.py  fifo_scheduler.py  strict_priority_scheduler.py  tbp_scheduler.py  wfq_scheduler.py
assessment/benchmarks/: README.md  __init__.py  aap_sensitivity_sweep.py  compare_token_budgets.py  comparison_benchmark.py  detector_error_sweep.py  statistical_benchmark.py  stress_benchmark.py  wcrt_inverse_analysis.py
assessment/metrics/: __init__.py  compute.py  order_analysis.py  results.py  visualization.py  wcrt.py
assessment/scripts/: __init__.py  analyze_protection_results.py  compare_desktop_rpi.py  consolidate_benchmark_results.py
assessment/tests/: __init__.py  test_baselines.py  test_metrics.py  test_order_analysis.py  test_triage4_wcrt.py  test_workloads.py
assessment/workloads/: __init__.py  robustness.py  scenarios.py
docs/chat-reports/: REFERENCE_Scenario_Crosswalk.md  RESEARCH_Stage3_Tables.md  RESEARCH_Stage3b_Hardware_Results.md
prototype/: README.md  analyze.py  collect_results.sh  consolidate.py  inversions.py  pi_hosts.conf.example  requirements-client.txt  requirements.txt  run_host.sh  run_pi.sh  schedule_id.py
prototype/broker/: __init__.py  config.py  d_smoke.py  dispatchers.py  m0_smoke.py  mqtt_min.py  server.py
tests/: test_alarm_protection.py  test_online_dispatcher.py  test_overhead_validation.py  test_triage4_core.py
(+137 files in other folders)
