[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triage4"
version = "1.0.0"
description = "TRIAGE/4 core scheduling package for priority-aware IoT message serving"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "TRIAGE/4 Contributors" }
]
license = "MIT"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "black>=23.0.0",
  "mypy>=1.5.0",
]
research = [
  "matplotlib>=3.7.0",
  "scipy>=1.10.0",
  "pandas>=2.0.0",
  "tqdm>=4.67.1",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["triage4*"]
exclude = ["tests*", "benchmarks*", "assessment*"]
